# self-correcting-coding-agent

./: README.md  executor.py  graph.py  llm.py  main.py  next.config.ts  package.json  pyproject.toml  server.py  state.py  tools.py
testcases/: broken_script.py  check_numpy.py  check_status.py  factorial.py  factorial_fixed.py  fixed_script.py  hello.py  infinite_loop.py  math_test.py  matrix_script.py  prime_check.py  sum_numbers.py  sum_strings.py  test_add.py
